[package]
name = "gfasort"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Guarracino <andreaguarracino@outlook.com>"]
description = "Bidirected graph sorting using Ygs algorithm (SGD + grooming + topological sort)"
repository = "https://github.com/pangenome/gfasort"
license = "MIT"
keywords = ["bioinformatics", "graph", "pangenome", "sorting", "gfa"]
categories = ["algorithms", "science"]
readme = "README.md"

[lib]
name = "gfasort"
path = "src/lib.rs"

[dependencies]
# Core dependencies (required)
rand = "0.8"
rand_xoshiro = "0.6"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
